crates/toml/tests/snapshots/invalid/float/double-dot-01.stderr
TOML parse error at line 1, column 20
  |
1 | double-point-1 = 0..1
  |                    ^
invalid fraction, expected digits

---
TOML parse error at line 1, column 20
  |
1 | double-point-1 = 0..1
  |                    ^^
invalid float, expected nothing
